crates/engage/tests/integrations/snapshots/integrations__short_help@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should successfully print the short help and exit.
---
Some(
    0,
)
