crates/engage/tests/integrations/snapshots/integrations__short_help@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should successfully print the short help and exit.
---

