crates/engage/tests/integrations/snapshots/integrations__short_help@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should successfully print the short help and exit.
---
A process composer with ordering and parallelism based on directed acyclic graphs

Usage: engage [OPTIONS]
       engage <COMMAND>

Commands:
  completions  Print completions for a supported shell
  dot          Print a graph in Graphviz' DOT language of processes and their dependencies
  list         List processes
  help         Print this message or the help of the given subcommand(s)

Options:
  -f, --file <FILE>          Manually select the Engage file
  -l, --log-format <FORMAT>  Select the log format [default: default] [possible values: default, compact, full, pretty, json]
  -p, --process <PROCESS>    Select a process
  -h, --help                 Print help (see more with '--help')
  -V, --version              Print version
