crates/engage/tests/integrations/snapshots/integrations__task_dependency_cycle@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should exit with an error about dependency cycles, in particular about self-loops."
---
Errors:

#1
Error: refusing to run tasks with dependency cycles
Help: try using `engage dot` to visualize the graph to determine where to break the cycles
Note: running tasks with dependency cycles would result in a deadlock

#2 (which caused #1)
Error: `task` depends on itself
