crates/engage/tests/integrations/snapshots/integrations__task_dependency_cycle@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should exit with an error about dependency cycles, in particular about self-loops."
---

