crates/engage/tests/integrations/snapshots/integrations__task_dependency_cycle_dot@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should show the graphviz dot representation even though there are cycles.
---
digraph {
    0 [ label = "task" ]
    0 -> 0 [ label = "via 'after'" ]
}
